change modal to overflow auto instead to fix weird css

--- a/styleguide/_forms.scss
+++ b/styleguide/_forms.scss
@@ -30,7 +30,7 @@
     display: flex;
     flex: 0 0 auto;
     flex-flow: row wrap;
-    overflow: scroll;
+    overflow: auto;
     padding: 18px;
   }
 
